--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -52,6 +53,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0-rc01"
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.4.0-rc01"
     implementation "androidx.lifecycle:lifecycle-common-java8:2.4.0-rc01"
+
+    implementation "androidx.navigation:navigation-fragment-ktx:2.4.0-alpha10"
+    implementation "androidx.navigation:navigation-ui-ktx:2.4.0-alpha10"
 
     implementation project(":util")
     implementation project(":stylusview")
