--- a/util/build.gradle
+++ b/util/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -62,9 +63,10 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
 
     implementation "com.squareup.moshi:moshi-kotlin:1.12.0"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.5.31"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:1.12.0"
 
-    implementation "androidx.room:room-ktx:2.3.0"
+    api "androidx.room:room-ktx:2.3.0"
     kapt "androidx.room:room-compiler:2.3.0"
 
     implementation project(":stylusview")
