--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'com.google.android.gms.oss-licenses-plugin'
 }
 
 android {
@@ -56,6 +57,8 @@ dependencies {
 
     implementation "androidx.navigation:navigation-fragment-ktx:2.4.0-alpha10"
     implementation "androidx.navigation:navigation-ui-ktx:2.4.0-alpha10"
+
+    implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
 
     implementation project(":util")
     implementation project(":stylusview")
